--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* borderを含めた幅で要素の幅が計算されるように */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+/* 要素が真ん中によるようにフレックスボックスを設定 */
+#root {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  height: 100vh;
+  max-width: 320px;
+}
+
+.dots{
+  height: 9px;
+  width: 9px;
+  border: 1px solid #0f1d1d;
+  background: #0f1d1d;
+}
+
+.field{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* スネーク */
+.snake{
+  background: white;
+}
+
+.food{
+  background: pink;
 }
