--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
 
 /* 要素が真ん中によるようにフレックスボックスを設定 */
 #root {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   text-align: center;
